--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -20,6 +20,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'reviews:review_list' %}">Reviews</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'about:about' %}">About</a>
+                </li>
                 {% if user.is_authenticated %}
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'users:profile' %}">Profile</a>
