--- a/menu/templates/menu/category_list.html
+++ b/menu/templates/menu/category_list.html
@@ -4,10 +4,25 @@
 <div class="menu-container">
   <h1>Menu Categories</h1>
   <ul class="list-group">
+    <div class="menu-category-container">
+  <h2 class="menu-category">{{ category.name }}</h2>
     <li class="list-group-item"><a href="#">Starters</a></li>
+    </div>
+
+    <div class="menu-category-container">
+  <h2 class="menu-category">{{ category.name }}</h2>
     <li class="list-group-item"><a href="#">Main Courses</a></li>
+    </div>
+
+    <div class="menu-category-container">
+  <h2 class="menu-category">{{ category.name }}</h2>
     <li class="list-group-item"><a href="#">Desserts</a></li>
+    </div>
+
+    <div class="menu-category-container">
+  <h2 class="menu-category">{{ category.name }}</h2>
     <li class="list-group-item"><a href="#">Drinks</a></li>
   </ul>
+    </div>
 </div>
 {% endblock %}
