--- a/menu/templates/menu/menu_item_form.html
+++ b/menu/templates/menu/menu_item_form.html
@@ -22,7 +22,7 @@
       <input type="number" id="price" name="price" class="form-control" step="0.01" required>
     </div>
 
-    <button type="submit" class="btn btn-custom">Save</button>
+    <button type="submit" class="btn btn-primary">Save</button>
   </form>
 </div>
 {% endblock %}
