--- a/bookings/templates/bookings/booking_form.html
+++ b/bookings/templates/bookings/booking_form.html
@@ -31,7 +31,7 @@
       <textarea class="form-control" rows="3"></textarea>
     </div>
 
-    <button type="submit" class="btn btn-custom">Submit</button>
+    <button type="submit" class="btn btn-primary">Submit</button>
   </form>
 </div>
 {% endblock %}
