--- a/bookings/templates/bookings/success.html
+++ b/bookings/templates/bookings/success.html
@@ -6,7 +6,7 @@
   <h1 class="booking-header">Booking Confirmed 🎉</h1>
   <p>Your table has been successfully reserved.</p>
 
-  <a href="{% url 'bookings:booking_list' %}" class="btn btn-custom mt-3">
+  <a href="{% url 'bookings:booking_list' %}" class="btn btn-primary mt-3">
     View My Bookings
   </a>
 </div>
