--- a/bookings/templates/bookings/upload_booking_image.html
+++ b/bookings/templates/bookings/upload_booking_image.html
@@ -25,5 +25,5 @@
     <button type="submit">Upload</button>
   </form>
 
-  <p><a href="{% url 'bookings:booking_detail' booking.id %}">Back to booking</a></p>
+  <p><a class="btn btn-secondary" href="{% url 'bookings:booking_detail' booking.id %}">Back to booking</a></p>
 {% endblock %}
