--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -8,7 +8,11 @@
     <form method="post">
       {% csrf_token %}
       {{ form.as_p }}
-      <button class="btn btn-primary" type="submit">Login</button>
+        <button class="btn btn-primary" type="submit">Login</button>
+        <div class="mt-3">
+          <a href="{% url 'account_reset_password' %}" class="btn btn-outline-primary me-2" role="button">Forgot your password?</a>
+          <a href="{% url 'users:signup' %}" class="btn btn-outline-secondary" role="button">Create an account</a>
+        </div>
     </form>
   </div>
 </div>
