--- a/templates/partials/_carousel_bookings.html
+++ b/templates/partials/_carousel_bookings.html
@@ -10,19 +10,19 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="{{ MEDIA_URL }}menu_images/slideshow1.jpg" class="d-block w-100" alt="Slide 1">
+      <img src="{{ MEDIA_URL }}menu_images/slideshow1.jpg" class="d-block w-100" alt="Delicious pizza varieties with fresh toppings" width="1200" height="600" loading="eager">
     </div>
     <div class="carousel-item">
-      <img src="{{ MEDIA_URL }}menu_images/slideshow2.jpg" class="d-block w-100" alt="Slide 2">
+      <img src="{{ MEDIA_URL }}menu_images/slideshow2.jpg" class="d-block w-100" alt="Fresh pasta dishes with authentic Italian flavors" width="1200" height="600" loading="lazy">
     </div>
     <div class="carousel-item">
-      <img src="{{ MEDIA_URL }}menu_images/slideshow3.jpg" class="d-block w-100" alt="Slide 3">
+      <img src="{{ MEDIA_URL }}menu_images/slideshow3.jpg" class="d-block w-100" alt="Premium seafood and grilled specialties" width="1200" height="600" loading="lazy">
     </div>
     <div class="carousel-item">
-      <img src="{{ MEDIA_URL }}menu_images/slideshow4.jpg" class="d-block w-100" alt="Slide 4">
+      <img src="{{ MEDIA_URL }}menu_images/slideshow4.jpg" class="d-block w-100" alt="Gourmet appetizers and starters" width="1200" height="600" loading="lazy">
     </div>
     <div class="carousel-item">
-      <img src="{{ MEDIA_URL }}menu_images/slideshow5.jpg" class="d-block w-100" alt="Slide 5">
+      <img src="{{ MEDIA_URL }}menu_images/slideshow5.jpg" class="d-block w-100" alt="Decadent desserts and sweet treats" width="1200" height="600" loading="lazy">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#bookingCarousel" data-bs-slide="prev">
