--- a/templates/partials/_slideshow.html
+++ b/templates/partials/_slideshow.html
@@ -8,19 +8,19 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="{{ MEDIA_URL }}menu_images/restaurant-slideshow1.jpg" class="d-block w-100" alt="Tomato bruschetta on toast">
+      <img src="{{ MEDIA_URL }}menu_images/restaurant-slideshow1.jpg\" class="d-block w-100" alt="Tomato bruschetta on crispy toast with fresh basil" width="1200" height="600" loading="eager">
     </div>
     <div class="carousel-item">
-      <img src="{{ MEDIA_URL }}menu_images/restaurant-slideshow2.jpg" class="d-block w-100" alt="Creamy parmesan pasta">
+      <img src="{{ MEDIA_URL }}menu_images/restaurant-slideshow2.jpg\" class="d-block w-100" alt="Creamy parmesan pasta with herbs" width="1200" height="600" loading="lazy">
     </div>
     <div class="carousel-item">
-      <img src="{{ MEDIA_URL }}menu_images/restaurant-slideshow3.jpg" class="d-block w-100" alt="Grilled salmon with vegetables">
+      <img src="{{ MEDIA_URL }}menu_images/restaurant-slideshow3.jpg\" class="d-block w-100" alt="Grilled salmon with seasonal vegetables" width="1200" height="600" loading="lazy">
     </div>
     <div class="carousel-item">
-      <img src="{{ MEDIA_URL }}menu_images/restaurant-slideshow4.jpg" class="d-block w-100" alt="Grilled salmon with vegetables">
+      <img src="{{ MEDIA_URL }}menu_images/restaurant-slideshow4.jpg\" class="d-block w-100" alt="Gourmet seafood platter" width="1200" height="600" loading="lazy">
     </div>
     <div class="carousel-item">
-      <img src="{{ MEDIA_URL }}menu_images/restaurant-slideshow5.jpg" class="d-block w-100" alt="Grilled salmon with vegetables">
+      <img src="{{ MEDIA_URL }}menu_images/restaurant-slideshow5.jpg\" class="d-block w-100" alt="Chef's special signature dish" width="1200" height="600" loading="lazy">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
