--- a/menu/templates/menu/menu_item_detail.html
+++ b/menu/templates/menu/menu_item_detail.html
@@ -25,9 +25,9 @@
   {% endif %}
 
   {% if item.image %}
-    <img src="{{ item.image.url }}" class="img-thumbnail menu-detail-img mb-3">
+    <img src="{{ item.image.url }}" alt="{{ item.name }} - {{ item.category.name }}" class="img-thumbnail menu-detail-img mb-3" width="800" height="600" loading="lazy">
   {% else %}
-    <img src="{% static 'menu/images/placeholder-food.svg' %}" class="img-thumbnail menu-detail-img mb-3">
+    <img src="{% static 'menu/images/placeholder-food.svg' %}" alt="Placeholder image for {{ item.name }}" class="img-thumbnail menu-detail-img mb-3" width="800" height="600" loading="lazy">
   {% endif %}
 
   <p>{{ item.description }}</p>
