Add logo to navbar and dynamic page titles - logo and title link to home

--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -4,6 +4,7 @@
 <link rel="stylesheet" href="{% static 'css/about.css' %}">
 
 {% block title %}About Us — YourTable{% endblock %}
+{% block page_title %}About{% endblock %}
 
 {% block content %}
 <div class="about-page">
