--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% block title %}Home | YourTable{% endblock %}
+{% block page_title %}Home{% endblock %}
 
 {% block content %}
 <section class="hero">
