--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,6 +1,10 @@
+{% load static %}
 <nav class="navbar navbar-expand-lg navbar-light bg-white">
     <div class="container-fluid">
-        <a class="navbar-brand fw-bold text-primary" href="{% url 'home' %}">YourTable</a>
+        <a class="navbar-brand d-flex align-items-center" href="{% url 'home' %}">
+            <img src="{% static 'images/YourTable-Logo.jpg' %}" alt="YourTable Logo" height="40" class="me-2">
+            <span class="fw-bold text-primary">{% block page_title %}Home{% endblock %}</span>
+        </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
