--- a/templates/registration/profile.html
+++ b/templates/registration/profile.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% load static %}
 
+{% block page_title %}Profile{% endblock %}
+
 {% block content %}
 <style>
   .activity-item {
