--- a/templates/reviews/review_list.html
+++ b/templates/reviews/review_list.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block title %}Reviews | YourTable{% endblock %}
+{% block page_title %}Reviews{% endblock %}
 
 {% block content %}
   <h2>Reviews</h2>
