Update bookings, menu, and navbar templates for improved UI and responsiveness

--- a/bookings/templates/bookings/create_booking.html
+++ b/bookings/templates/bookings/create_booking.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block page_title %}Create Booking{% endblock %}
+
 {% block content %}
   {# Promotional carousel shown to all users on the booking page #}
   {% include 'partials/_carousel_bookings.html' %}
