--- a/bookings/templates/bookings/booking_form.html
+++ b/bookings/templates/bookings/booking_form.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 {% block title %}Booking Form{% endblock %}
+{% block page_title %}Booking Form{% endblock %}
 
 {% block content %}
 <link rel="stylesheet" href="{% static 'bookings/css/bookings.css' %}">
