Fix minor error to pass HTML validation on Home Page - Add Validator image before and after fix - Add Lighthouse scan image - Update menu item detail image handling with onerror attribute - Update footer to reorder social links and text

--- a/templates/footer.html
+++ b/templates/footer.html
@@ -2,8 +2,8 @@
     <div class="container text-center">
         <p class="m-0 text-white">{% block copyright %} © 2025 YourTable. All rights reserved {% endblock %}</p>
 
+        <p class="m-0 text-white mb-2">Follow us:</p>
         <ul class="social-list list-unstyled d-inline-flex align-items-center m-0">
-            <p class="m-0 text-white">Follow us:</p>
             <li>
                 <a class="social-link" href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Facebook">
                     <i class="fab fa-facebook-square fa-lg" aria-hidden="true"></i>
