Update booking template functionality - Add space between butten as needed - Improve user navigation by removing dueplcated buttons - Fix carousel aria-labels for accessibility

--- a/bookings/templates/bookings/booking_delete.html
+++ b/bookings/templates/bookings/booking_delete.html
@@ -55,7 +55,9 @@
     </div>
   {% endif %}
 </div>
+{% endblock %}
 
+{% block extra_css %}
 <style>
   .modal-content.border-danger {
     border: 3px solid #dc3545;
