--- a/bookings/templates/bookings/create_booking.html
+++ b/bookings/templates/bookings/create_booking.html
@@ -42,5 +42,6 @@
     <button type="submit" class="btn btn-primary">Book</button>
   </form>
 
-  <p><a class="btn btn-secondary" href="{% url 'bookings:booking_list' %}">Back to bookings</a></p>
+  <p><a class="btn btn-secondary" href="{% url 'bookings:booking_list' %}" style="margin-top: 6px;">Back to bookings</a></p>
+  
 {% endblock %}
