--- a/bookings/templates/bookings/booking_detail.html
+++ b/bookings/templates/bookings/booking_detail.html
@@ -26,8 +26,9 @@
     <a href="{% url 'bookings:booking_delete' booking.pk %}" class="btn btn-danger ms-2">Cancel</a>
   {% endif %}
 
-  <br><br>
-  <a class="btn btn-secondary" href="{% url 'bookings:booking_list' %}">Back to Bookings</a>
+  <div class="mt-3">
+    <a class="btn btn-secondary" href="{% url 'bookings:booking_list' %}">Back to Bookings</a>
+  </div>
 </div>
 <!-- User history for changes they made -->
 <div class="container mt-4">
